--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage": "https://Mosespushpa.github.io/QR-code",
   "name": "qr-code",
   "version": "0.1.0",
   "private": true,
@@ -14,12 +14,13 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "scripts":{"start":"react-scripts start",
+"predeploy":"npm run build",
+"deploy":"gh-pages -d build",
+"build":"react-scripts build",
+"test":"react-scripts test",
+"eject":"react-scripts eject"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
